# OpenGLES

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tcl/opengles/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cubeFragmentSource.glsl  cubeVertextSource.glsl  fragmentSource.glsl  fragmentWithTexture.glsl  fregmentShader.glsl  vertext.glsl  vertextSource.glsl  vertextWithTexture.glsl
app/src/main/assets/model/: fish.md2
app/src/main/assets/shader/: modelTextured.fsh  modelTextured.vsh  vertextWithLight.glsl  vertextWithTexture.glsl
app/src/main/cpp/: Render.cpp  native-lib.cpp
app/src/main/cpp/assimp/contrib/poly2tri/: sweep.cc
app/src/main/cpp/assimp/contrib/unzip/: crypt.h  unzip.h
app/src/main/cpp/element/: Vertex.cpp  Vertex.h
app/src/main/cpp/include/: Render.h
app/src/main/cpp/include/md2/: Md2.h  Md2Header.h  Md2Model.h
app/src/main/cpp/include/model/: AssimpLoader.h  Model.h  ObjModel.h
app/src/main/cpp/include/shape/: CubeWithLight.h  Square.h
app/src/main/cpp/include/soil/: SOIL.h  stbi_DDS_aug_c.h
app/src/main/cpp/include/util/: Debug.h  FileUtil.h  RenderUtil.h
app/src/main/cpp/lodepng/: lodepng.cpp
app/src/main/cpp/matrix/: Matrix.cpp  Matrix.h  MatrixState.cpp
app/src/main/cpp/matrixstate/: MatrixState.cpp  MatrixState.h
app/src/main/cpp/modules/: BaseShape.cpp  BaseShape.h  Cube.cpp  Cube.h  CubeWithLight.cpp  CubeWithLight.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  TriangleWithTexture.cpp  TriangleWithTexture.h
app/src/main/cpp/modules/include/: CubeWithLight.h  Triangle.h  TriangleWithTexture.h
app/src/main/cpp/modules/md2/: Md2Model.cpp
app/src/main/cpp/modules/model/: AssimpLoader.cpp  Model.cpp  ObjModel.cpp
app/src/main/cpp/modules/shape/: BaseShape.cpp  CubeWithLight.cpp  Square.cpp  Triangle.cpp  TriangleWithTexture.cpp
app/src/main/cpp/render/: Render.cpp  Render.h
app/src/main/cpp/soil/: SOIL.c  SOIL.h  image_helper.c  stb_image_aug.c  stb_image_aug.h
app/src/main/cpp/soil/include/: stb_image_aug.h  stbi_DDS_aug.h
app/src/main/cpp/util/: Debug.cpp  Debug.h  FileUtil.cpp  FileUtil.h  RenderUtil.cpp  RenderUtil.h  ShaderUtil.cpp  ShaderUtil.h  TextureUtil.cpp  TextureUtil.h
app/src/main/java/com/tcl/opengles/: GLRender.java  MainActivity.java
app/src/main/java/com/tcl/opengles/jni/: JNI.java
app/src/main/java/com/tcl/opengles/util/: tLog.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/tcl/opengles/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
